[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "os-fastapi-middleware"
version = "1.1.3"
description = "Adaptable security middlewares for FastAPI: API keys, rate limiting, IP whitelist"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Tiago Morais", email = "tcharrua@oddsscanner.com" }
]
keywords = ["fastapi", "middleware", "security", "rate-limit", "api-key", "ip-whitelist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[project.urls]
Homepage = "https://github.com/tcharrua-odds/os-fastapi-middleware"
Documentation = "https://github.com/tcharrua-odds/os-fastapi-middleware/blob/main/README.md"
Repository = "https://github.com/tcharrua-odds/os-fastapi-middleware"
Issues = "https://github.com/tcharrua-odds/os-fastapi-middleware/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["os_fastapi_middleware*"]
where = ["."]